# Kiselev_Andrey_153504

lab1(QT)/build-task-1-1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lab1(QT)/build-task-1-2-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
lab1(QT)/build-task-1-3-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  New Text Document.txt  build.ninja  cmake_install.cmake
lab1(QT)/build-task-1-4-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lab1(QT)/build-task-1-5-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lab1(QT)/task-1-1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1(QT)/task-1-2/: CMakeLists.txt  canva.cpp  canva.h  circle.cpp  circle.h  hexagon.cpp  hexagon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oval.cpp  oval.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  shape.cpp  shape.h  square.cpp  square.h  star.cpp  star.h  triangle.cpp  triangle.h
lab1(QT)/task-1-3/: CMakeLists.txt  date.cpp  date.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1(QT)/task-1-4/: CMakeLists.txt  airport.cpp  airport.h  flights.cpp  flights.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1(QT)/task-1-5/: CMakeLists.txt  main.cpp
lab2(QT)/build-task-1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lab4/: lab4.sln
lab6/: lab6.sln
lab7/: lab7.sln
lab8/: lab8.sln
(+427 files in other folders)
